# skav

./: CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
skav/: app.py  log.py  types.py  utils.py
skav/core/: __init__.py  project_storage.py  project_workspace.py  session.py  transcript_file.py
skav/core/models/: __init__.py  thinking_metadata.py  tool_use_result.py
skav/core/models/contents/: __init__.py  document.py
skav/core/models/transcript_items/: __init__.py
skav/templates/: index.html
skav/transcripts/: __init__.py  project_storage.py  project_storage_path.py  project_workspace.py  session.py  tool_result_file.py  transcript_file.py
skav/transcripts/models/: usage.py
skav/transcripts/models/contents/: tool_use.py
skav/transcripts/models/messages/: __init__.py  progress.py
skav/transcripts/models/transcript_items/: __init__.py
tests/: conftest.py  test_app.py  test_log.py
tests/core/: __init__.py  test_project_storage.py  test_project_storage_path.py  test_project_workspace.py  test_session.py  test_tool_result.py  test_tool_result_file.py  test_transcript_file.py  test_utils.py
tests/core/models/: __init__.py  test_thinking_metadata.py  test_tool_use_result.py  test_usage.py
tests/core/models/contents/: __init__.py  test_document.py  test_server_tool_use.py  test_text.py  test_thinking.py  test_tool_result.py  test_tool_use.py
tests/core/models/messages/: __init__.py  test_assistant.py  test_assistant_message.py  test_attachment.py  test_content.py  test_progress.py  test_user.py  test_user_message.py
tests/core/models/transcript_items/: __init__.py  test_assistant.py  test_file_history_snapshot.py  test_progress.py  test_queue_operation.py  test_summary.py  test_system.py  test_user.py
tests/fixtures/events/input/: permission_request.json  post_tool_use.json  pre_tool_use.json  session_start.json  stop.json  subagent_stop.json  user_prompt.json
tests/transcripts/: __init__.py  test_project_storage.py  test_project_storage_path.py  test_project_workspace.py  test_session.py  test_tool_result_file.py  test_transcript_file.py
tests/transcripts/fixtures/: sample_transcript_items.py
tests/transcripts/models/: __init__.py  test_thinking_metadata.py  test_tool_use_result.py  test_usage.py
tests/transcripts/models/contents/: __init__.py  test_document.py  test_server_tool_use.py  test_text.py  test_thinking.py  test_tool_result.py  test_tool_use.py
vibehist/: app.py  constants.py  log.py  types.py
vibehist/core/: project_storage.py  project_storage_path.py  project_workspace.py  session.py  tool_result.py  tool_result_file.py  transcript_file.py
vibehist/core/models/: thinking_metadata.py  tool_use_result.py  usage.py
(+36 files in other folders)
