[tool.poetry]
name = "vibehist"
version = "0.1.0"
description = "A Python-based service for vibe coding observability"
authors = ["Chaojie Yan <ushareroses@gmail.com>"]
readme = "README.md"
packages = [{include = "vibehist"}]

[tool.poetry.dependencies]
python = ">=3.10"
typing-extensions = { version = "4.15.0", python = "<3.11" }


[tool.poetry.group.dev.dependencies]
mypy = "1.19.1"
pytest = "9.0.2"
pytest-cov = "7.0.0"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "."


[tool.mypy]
python_version = "3.11"     # Target Python version
strict = true                # Enable strict type checking
warn_return_any = true      # Warn about functions returning Any
warn_unused_ignores = true  # Warn about unused # type: ignore comments


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
